[gd_scene load_steps=4 format=3 uid="uid://dklr5kcqww66r"]

[ext_resource type="Script" path="res://gameplay/column/GameplayColumn.gd" id="1_p351e"]
[ext_resource type="PackedScene" uid="uid://d0cn6rkagucs0" path="res://gameplay/element_display/BackpackDisplay.tscn" id="2_gynnr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fj0u2"]

[node name="GameplayColumn" type="Control"]
custom_minimum_size = Vector2(150, 580)
layout_mode = 3
anchors_preset = 0
offset_right = 150.0
offset_bottom = 580.0
script = ExtResource("1_p351e")

[node name="BackgroundFill" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.686275, 0.686275, 0.686275, 0.698039)

[node name="CenterPoint" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Area2D" type="Area2D" parent="CenterPoint"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterPoint/Area2D"]
shape = SubResource("RectangleShape2D_fj0u2")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="AnchorPoint" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0

[node name="CenterBottom" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="BackpackDisplay" parent="CenterBottom" instance=ExtResource("2_gynnr")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.5
offset_right = 67.5
offset_bottom = 89.0
grow_horizontal = 2

[node name="Contents" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[connection signal="item_rect_changed" from="." to="." method="_on_item_rect_changed"]
[connection signal="mouse_entered" from="CenterPoint/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="CenterPoint/Area2D" to="." method="_on_area_2d_mouse_exited"]
